# I-Nex

./: .bzrignore  .editorconfig  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog.md  LICENSE.md  Makefile  README.md  README.md.license  SECURITY.md  changelog.awk  i-nex.kateproject  i-nex.mk  pl.linux.I_Nex.metainfo.xml  pl.linux.i_nex.desktop  pl.linux.i_nex.metainfo.xml
.reuse/: dep5
I-Nex/: ChangeLog  acinclude.m4  configure.ac
I-Nex/i-nex/: .gitignore  .project  .startup
I-Nex/i-nex/.hidden/: CHANGELOG
I-Nex/i-nex/.src/: MInit.module  ScreenShot.form
I-Nex/i-nex/.src/System/: FSystemInfo.form
JSON/: Makefile  i-nex-edid.c
LICENSES/: LicenseRef-AMD-Disclaimer.txt  LicenseRef-Intel-Acknowledgment.txt  LicenseRef-NVIDIA-Disclaimer.txt
debian/: changelog  control  copyright  gbp.conf  i-nex.links  pl.linux.I_Nex.desktop  rules  watch
debian/source/: lintian-overrides
debian/upstream/: metadata
manpages/: Makefile
pixmaps/: Makefile
