dnl -- package generated with gambas3 ide --

AC_INIT([I-Nex],
  m4_esyscmd([head -1 ../debian/changelog | perl -nle 'm/\S+\s+\((\S+)-\S+\)/ and print $1' | tr -d '\n']),
  [https://github.com/i-nex/I-Nex/issues], [i-nex], [https://i-nex.linux.pl/])
GB_INIT_PROJECT([i-nex])

dnl -- create makefile --

AC_OUTPUT(Makefile)
